--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.erimatnor</groupId>
     <artifactId>phonepledge</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
 
     <name>phonepledge</name>
     <url>http://github.com/erimatnor/phonepledge</url>
@@ -45,7 +43,7 @@
         <connection>scm:git:git://git@github.com/erimatnor/phonepledge.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/erimatnor/phonepledge.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>v0.3</tag>
     </scm>
 
     <build>
